--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="stars" id="stars"></div>
 
     <!-- Shooting Star Image -->
-    <img class="shooting-star" src="https://media.giphy.com/media/3oKIPwoeGErMmaI43C/giphy.gif" alt="Shooting Star" />
+    <img class="shooting-star" src="https://i.postimg.cc/SxzPSXMz/download.png" alt="Shooting Star" />
 
     <!-- Bird Image -->
     <img class="bird" src="https://i.postimg.cc/T3BxkKLY/output-onlinegiftools.gif" alt="Flying Bird" />
